--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <application
         android:allowBackup="true"
@@ -30,8 +31,29 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="http" 
+                      android:host="ros.org"
+                      android:path="/wiki/android_sensors_driver/install"
+                      />
+            </intent-filter>
+            
+            <!-- intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="http"
+                      
+                       />
+            </intent-filter-->
+            
+            <!-- android:host="*"   ?id=org.ros.android.sensors_driver  android:pathPattern="*org.ros.android.sensors_driver"     android:pathPrefix="/.*org.ros.android.sensors_driver.*"-->
         </activity>
-        <activity android:name="org.ros.android.MasterChooser" />
+        
+        <activity android:name="org.ros.android.MasterChooser">
+        </activity>
 
         <service android:name="org.ros.android.NodeMainExecutorService" />
     </application>
