--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ros.android.android_sensors_driver"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" 
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -18,6 +20,7 @@
 
     <application
         android:allowBackup="true"
+        tools:replace="android:icon"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
