--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,64 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     package="org.ros.android.android_sensors_driver"
-    android:versionCode="1"
-    android:versionName="1.0" 
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="17" />
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.NFC"/>
 
     <application
         android:allowBackup="true"
-        tools:replace="android:icon"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/sensors_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        tools:replace="android:icon">
         <activity
             android:name="org.ros.android.android_sensors_driver.MainActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
-            <intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="http" 
-                      android:host="ros.org"
-                      android:path="/wiki/android_sensors_driver/install"
-                      />
-            </intent-filter>
-            
-            <!-- intent-filter>
-                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="http"
-                      
-                       />
-            </intent-filter-->
-            
-            <!-- android:host="*"   ?id=org.ros.android.sensors_driver  android:pathPattern="*org.ros.android.sensors_driver"     android:pathPrefix="/.*org.ros.android.sensors_driver.*"-->
         </activity>
-        
-        <activity android:name="org.ros.android.MasterChooser">
-        </activity>
+        <activity android:name="org.ros.android.MasterChooser" />
 
-        <service android:name="org.ros.android.NodeMainExecutorService" />
+        <service android:name="org.ros.android.NodeMainExecutorService" >
+            <intent-filter>
+                <action android:name="org.ros.android.NodeMainExecutorService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
