--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,18 +19,18 @@
         android:label="@string/app_name"
         tools:replace="android:icon">
         <activity
-            android:name="org.ros.android.android_sensors_driver.MainActivity"
+            android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.ros.android.MasterChooser" />
 
+        <!-- Specify our android ROS chooser (where we specify our master) -->
+        <activity android:name="org.ros.android.MasterChooser" />
         <service android:name="org.ros.android.NodeMainExecutorService" >
             <intent-filter>
                 <action android:name="org.ros.android.NodeMainExecutorService" />
