--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/sensors_launcher"
         android:label="@string/app_name"
+        android:hardwareAccelerated="true"
         tools:replace="android:icon">
         <activity
             android:name=".MainActivity"
