--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:icon="@mipmap/sensors_launcher"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
+        android:largeHeap="true"
         tools:replace="android:icon">
         <activity
             android:name=".MainActivity"
