--- a/cv_bridge/build.gradle
+++ b/cv_bridge/build.gradle
@@ -31,8 +31,9 @@ apply plugin: "ros-android"
 apply plugin: "com.android.library"
 
 dependencies {
-    compile "org.ros.rosjava_core:rosjava:[0.2,0.3)"
-    compile "org.ros.rosjava_messages:sensor_msgs:[1.11,1.12)"
+    compile 'org.ros.android_core:android_10:[0.3,0.4)'
+//    compile "org.ros.rosjava_core:rosjava:[0.2,0.3)"
+//    compile "org.ros.rosjava_messages:sensor_msgs:[1.11,1.12)"
     compile project(':opencv3')
     compile project(':image')
 }
