--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 include "image"
-include "opencv"
+//include "opencv"
 include "opencv3"
-include "cv_bridge"
-include "android_sensors_driver"
+//include "cv_bridge"
+//include "sensors_driver"
