Removed - Old files and updated package details

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,17 @@
+##############################################################################
+# CMake
+##############################################################################
+
 cmake_minimum_required(VERSION 2.8.3)
-project(android_ros_drivers)
+project(android_sensors_driver)
+
+##############################################################################
+# Catkin
+##############################################################################
 
 find_package(catkin REQUIRED rosjava_build_tools)
 
-catkin_android_setup(assembleRelease uploadArchives)
+catkin_rosjava_setup(publish installApp)
 
 catkin_package()
 
@@ -11,5 +19,5 @@ catkin_package()
 # Installation
 ##############################################################################
 
-install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_MAVEN_DESTINATION}/android_ros_drivers/ 
-        DESTINATION ${CATKIN_GLOBAL_MAVEN_DESTINATION}/android_ros_drivers)
+install(DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_MAVEN_DESTINATION}/android_sensors_driver/
+        DESTINATION ${CATKIN_GLOBAL_MAVEN_DESTINATION}/android_sensors_driver)
